[package]
name = "cap1xxx"
version = "0.1.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"
repository = "https://github.com/zenria/cap1xxx"
description = "embedded-hal driver for cap1xxx touch buttons"
keywords=["embedded", "gfx-hat", "gfxhat", "raspberry"]
exclude = [
    "*.iml",
]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal="0.2"
